--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     "tinydb==4.7.0",
     "torch==1.13.1",
     "typer[all]==0.7.0",
-    "typing-extensions==4.4.0",
+    "typing-extensions>=4.4.0",
     "waitress==2.1.2"
 ]
 
